--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "mailreceipteventqueue",
+  "name": "mailreceipt-eventqueue-handler",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-useragent": "^1.0.15"
   }
 }
